--- a/.tsconfig-ultra-permissive.json
+++ b/.tsconfig-ultra-permissive.json
@@ -7,14 +7,14 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": false,
     "jsx": "react-jsx",
-    "declaration": true,
+    "declaration": false,
     "outDir": "dist",
     "downlevelIteration": true,
     "experimentalDecorators": true,
@@ -30,6 +30,9 @@
     "noErrorTruncation": true,
     "noImplicitReturns": false,
     "noUncheckedIndexedAccess": false,
+    "noPropertyAccessFromIndexSignature": false,
+    "noStrictGenericChecks": true,
+    "useDefineForClassFields": false,
     "checkJs": false,
     "ignoreDeprecations": "5.0",
     "suppressExcessPropertyErrors": true,
