--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/ --max-warnings=0",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/ --max-warnings=900",
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
+    "lint:strict": "eslint --ext .js,.jsx,.ts,.tsx src/ --max-warnings=0",
     "lint:examples": "eslint --ext .js,.jsx,.ts,.tsx examples/ --max-warnings=30",
     "typecheck": "tsc --noEmit --skipLibCheck",
     "typecheck:permissive": "tsc --noEmit --skipLibCheck --project ./.tsconfig-permissive.json",
+    "typecheck:ultra": "tsc --noEmit --skipLibCheck --project ./.tsconfig-ultra-permissive.json",
     "typecheck:examples": "tsc --noEmit --skipLibCheck --project ./.ts-examples.json",
     "prepare": "npm run build",
     "storybook": "start-storybook -p 6006",
