--- a/.tsconfig-permissive.json
+++ b/.tsconfig-permissive.json
@@ -1,48 +1,13 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "es2015",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": false,
-    "jsx": "react-jsx",
-    "declaration": true,
-    "outDir": "dist",
-    "downlevelIteration": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "noImplicitAny": false,
     "strictNullChecks": false,
-    "strictFunctionTypes": false,
-    "strictPropertyInitialization": false,
-    "noImplicitThis": false,
-    "suppressImplicitAnyIndexErrors": true,
+    "noImplicitAny": false,
     "noUnusedLocals": false,
+    "noImplicitThis": false,
     "noUnusedParameters": false,
-    "noErrorTruncation": true,
-    "noImplicitReturns": false,
-    "noUncheckedIndexedAccess": false,
-    "checkJs": false,
-    "ignoreDeprecations": "5.0",
-    "suppressExcessPropertyErrors": true,
-    "useUnknownInCatchVariables": false,
-    "baseUrl": ".",
-    "paths": {
-      "galileo-glass-ui": ["./src"],
-      "galileo-glass-ui/core": ["./src/core"],
-      "galileo-glass-ui/animations": ["./src/animations"],
-      "galileo-glass-ui/theme": ["./src/theme"],
-      "galileo-glass-ui/*": ["./src/*"]
-    }
-  },
-  "include": ["src/**/*", "examples/**/*"],
-  "exclude": ["node_modules", "dist"]
+    "strictPropertyInitialization": false,
+    "suppressExcessPropertyErrors": true
+  }
 }
