--- a/.tsconfig-ultra-permissive.json
+++ b/.tsconfig-ultra-permissive.json
@@ -1,51 +1,19 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "es2015",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "strict": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": false,
-    "jsx": "react-jsx",
-    "declaration": false,
-    "outDir": "dist",
-    "downlevelIteration": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "noImplicitAny": false,
     "strictNullChecks": false,
-    "strictFunctionTypes": false,
-    "strictPropertyInitialization": false,
+    "noImplicitAny": false,
     "noImplicitThis": false,
-    "suppressImplicitAnyIndexErrors": true,
+    "strictPropertyInitialization": false,
+    "strictFunctionTypes": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noErrorTruncation": true,
+    "noFallthroughCasesInSwitch": false,
     "noImplicitReturns": false,
-    "noUncheckedIndexedAccess": false,
-    "noPropertyAccessFromIndexSignature": false,
-    "noStrictGenericChecks": true,
-    "useDefineForClassFields": false,
-    "checkJs": false,
-    "ignoreDeprecations": "5.0",
     "suppressExcessPropertyErrors": true,
-    "useUnknownInCatchVariables": false,
-    "baseUrl": ".",
-    "paths": {
-      "galileo-glass-ui": ["./src"],
-      "galileo-glass-ui/core": ["./src/core"],
-      "galileo-glass-ui/animations": ["./src/animations"],
-      "galileo-glass-ui/theme": ["./src/theme"],
-      "galileo-glass-ui/*": ["./src/*"]
-    }
-  },
-  "include": ["src/**/*", "examples/**/*"],
-  "exclude": ["node_modules", "dist"]
+    "suppressImplicitAnyIndexErrors": true,
+    "allowUnreachableCode": true,
+    "allowUnusedLabels": true
+  }
 }
