--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,35 +5,33 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react-hooks/recommended",
-    "plugin:import/recommended",
-    "plugin:import/typescript",
-    "plugin:jsx-a11y/recommended",
-    "prettier"
+    "plugin:prettier/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript"
   ],
   "plugins": [
     "react",
     "@typescript-eslint",
-    "react-hooks",
     "prettier",
-    "import",
-    "jsx-a11y",
-    "testing-library"
+    "react-hooks",
+    "import"
   ],
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true,
+    "jest": true
+  },
   "settings": {
     "react": {
       "version": "detect"
     },
-    "testing-library/custom-queries": {
-      "data-testid": "data-testid"
-    },
-    "testing-library/custom-renders": {
-      "render": "render"
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
     }
-  },
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
   },
   "rules": {
     "prettier/prettier": "error",
@@ -41,57 +39,29 @@
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/no-unused-vars": ["warn", { 
-      "argsIgnorePattern": "^_",
-      "varsIgnorePattern": "^_"
-    }],
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }],
     "no-console": ["warn", { "allow": ["warn", "error"] }],
+    "import/namespace": "off",
+    "import/named": "off",
+    "import/no-unresolved": "off",
+    "import/order": [
+      "warn",
+      {
+        "groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
+        "newlines-between": "always",
+        "alphabetize": { "order": "asc", "caseInsensitive": true }
+      }
+    ],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    
-    "import/no-unresolved": "error",
-    "import/named": "error",
-    "import/default": "error",
-    "import/namespace": "error",
-    "import/order": ["warn", {
-      "groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
-      "newlines-between": "always",
-      "alphabetize": { "order": "asc", "caseInsensitive": true }
-    }],
-    
-    "jsx-a11y/aria-props": "error",
-    "jsx-a11y/aria-proptypes": "error",
-    "jsx-a11y/aria-role": "error",
-    "jsx-a11y/aria-unsupported-elements": "error",
-    "jsx-a11y/alt-text": "error",
-    
-    "testing-library/await-async-query": "off",
-    "testing-library/no-await-sync-query": "off",
-    "testing-library/no-render-in-setup": "off"
+    "no-case-declarations": "warn"
   },
   "overrides": [
     {
-      "files": ["*.ts", "*.tsx"],
-      "rules": {
-        "@typescript-eslint/explicit-module-boundary-types": ["warn"]
-      }
-    },
-    {
-      "files": ["*.test.ts", "*.test.tsx", "*.spec.ts", "*.spec.tsx"],
-      "env": {
-        "jest": true
-      },
-      "extends": [
-        "plugin:testing-library/react"
-      ],
+      "files": ["**/*.test.tsx", "**/*.test.ts", "src/__mocks__/**/*"],
       "rules": {
         "@typescript-eslint/no-explicit-any": "off",
-        "testing-library/prefer-screen-queries": "warn",
-        "testing-library/prefer-find-by": "warn",
-        "testing-library/no-wait-for-multiple-assertions": "warn",
-        "testing-library/await-async-query": "off",
-        "testing-library/no-await-sync-query": "off",
-        "testing-library/no-render-in-setup": "off"
+        "no-console": "off"
       }
     }
   ]
