--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
+    "./slim": {
+      "import": "./dist/slim.esm.js",
+      "require": "./dist/slim.js",
+      "types": "./dist/slim.d.ts"
+    },
     "./core": {
       "import": "./dist/core.esm.js",
       "require": "./dist/core.js",
@@ -34,6 +39,18 @@
       "import": "./dist/components.esm.js",
       "require": "./dist/components.js",
       "types": "./dist/components.d.ts"
+    },
+    "./components/Button": {
+      "import": "./dist/components/Button.esm.js",
+      "require": "./dist/components/Button.js"
+    },
+    "./components/Card": {
+      "import": "./dist/components/Card.esm.js",
+      "require": "./dist/components/Card.js"
+    },
+    "./components/Charts": {
+      "import": "./dist/components/Charts.esm.js",
+      "require": "./dist/components/Charts.js"
     },
     "./hooks": {
       "import": "./dist/hooks.esm.js",
