--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3 || ^6.0.0"
   },
   "dependencies": {
     "chart.js": "^4.3.0",
