--- a/package.json
+++ b/package.json
@@ -119,7 +119,13 @@
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "styled-components": "^5.3.3 || ^6.0.0"
+    "styled-components": "^5.3.3 || ^6.0.0",
+    "chart.js": "^4.3.0",
+    "framer-motion": "^10.12.16",
+    "popmotion": "^11.0.5",
+    "react-chartjs-2": "^5.2.0",
+    "react-spring": "^9.6.1",
+    "react-window": "^1.8.9"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -143,13 +149,34 @@
     "csstype": "^3.1.2",
     "polished": "^4.2.2"
   },
-  "optionalDependencies": {
-    "chart.js": "^4.3.0",
-    "framer-motion": "^10.12.16",
-    "popmotion": "^11.0.5",
-    "react-chartjs-2": "^5.2.0",
-    "react-spring": "^9.6.1",
-    "react-window": "^1.8.9"
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": false
+    },
+    "react-dom": {
+      "optional": false
+    },
+    "styled-components": {
+      "optional": false
+    },
+    "chart.js": {
+      "optional": true
+    },
+    "react-chartjs-2": {
+      "optional": true
+    },
+    "framer-motion": {
+      "optional": true
+    },
+    "popmotion": {
+      "optional": true
+    },
+    "react-spring": {
+      "optional": true
+    },
+    "react-window": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
