--- a/dist-min/package.json
+++ b/dist-min/package.json
@@ -19,9 +19,15 @@
   "author": "Galileo",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0",
-    "styled-components": "^5.3.3 || ^6.0.0"
+    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "styled-components": "^5.3.3 || ^6.0.0",
+    "framer-motion": "^10.12.16 || ^12.0.0"
+  },
+  "peerDependenciesMeta": {
+    "framer-motion": {
+      "optional": true
+    }
   },
   "dependencies": {
     "color": "^4.2.3",
