--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "styled-components": "^5.3.3 || ^6.0.0",
     "chart.js": "^4.3.0",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.12.16 || ^12.0.0",
     "popmotion": "^11.0.5",
     "react-chartjs-2": "^5.2.0",
     "react-spring": "^9.6.1",
