--- a/dist-min/package.json
+++ b/dist-min/package.json
@@ -21,13 +21,10 @@
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "styled-components": "^5.3.3 || ^6.0.0",
-    "framer-motion": "^10.12.16 || ^12.0.0"
+    "styled-components": "^5.3.3 || ^6.0.0"
   },
-  "peerDependenciesMeta": {
-    "framer-motion": {
-      "optional": true
-    }
+  "optionalDependencies": {
+    "framer-motion": "^10.0.0 || ^12.0.0"
   },
   "dependencies": {
     "color": "^4.2.3",
