--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
   "dependencies": {
     "color": "^4.2.3",
     "csstype": "^3.1.2",
+    "date-fns": "^4.1.0",
     "polished": "^4.2.2"
   },
   "peerDependenciesMeta": {
@@ -180,10 +181,12 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^7.1.1",
+    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-styled-components": "^7.1.1",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -192,8 +195,6 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "styled-components": "^5.3.6",
-    "typescript": "^4.9.5",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.2"
+    "typescript": "^4.9.5"
   }
 }
