--- a/dist-min/package.json
+++ b/dist-min/package.json
@@ -24,11 +24,11 @@
     "styled-components": "^5.3.3 || ^6.0.0"
   },
   "optionalDependencies": {
-    "framer-motion": "^10.0.0 || ^12.0.0"
+    "framer-motion": "^10.0.0 || ^12.0.0 || ^13.0.0"
   },
   "dependencies": {
-    "color": "^4.2.3",
-    "polished": "^4.2.2"
+    "color": "^5.0.0",
+    "polished": "^4.3.1"
   },
   "minimalDistribution": true
 }
