--- a/package.json
+++ b/package.json
@@ -122,18 +122,18 @@
     "styled-components": "^5.3.3 || ^6.0.0"
   },
   "optionalDependencies": {
-    "chart.js": "^4.0.0",
-    "framer-motion": "^10.0.0 || ^12.0.0",
-    "popmotion": "^11.0.0",
-    "react-chartjs-2": "^5.0.0",
-    "react-spring": "^9.0.0",
-    "react-window": "^1.8.0"
+    "chart.js": "^4.4.8",
+    "framer-motion": "^10.0.0 || ^12.0.0 || ^13.0.0",
+    "popmotion": "^11.0.5",
+    "react-chartjs-2": "^5.3.0",
+    "react-spring": "^9.7.5",
+    "react-window": "^1.8.11"
   },
   "dependencies": {
-    "color": "^4.2.3",
-    "csstype": "^3.1.2",
+    "color": "^5.0.0",
+    "csstype": "^3.1.3",
     "date-fns": "^4.1.0",
-    "polished": "^4.2.2"
+    "polished": "^4.3.1"
   },
   "peerDependenciesMeta": {
     "react": {
