--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "framer-motion": "^10.0.0 || ^12.0.0 || ^13.0.0",
     "popmotion": "^11.0.5",
     "react-chartjs-2": "^5.3.0",
-    "react-spring": "^9.7.5",
+    "react-spring": "^9.0.0 || ^10.0.0",
     "react-window": "^1.8.11"
   },
   "dependencies": {
