--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@veerone/galileo-glass-ui",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A comprehensive glass morphism design system for modern interfaces",
   "homepage": "https://galileo-glass.com/",
   "repository": {
@@ -83,7 +83,7 @@
     "build": "rm -rf dist && rollup -c",
     "quick-build": "SKIP_TS_CHECK=true npm run build",
     "build:skip-ts": "SKIP_TS_CHECK=true npm run build",
-    "build:production": "SKIP_TS_CHECK=true npm run build && node scripts/fix-declarations.js",
+    "build:production": "(npm run lint:build || true) && SKIP_TS_CHECK=true npm run build && node scripts/fix-declarations.js",
     "build:with-checks": "npm run typecheck:build && (npm run lint:build || true) && rollup -c",
     "build:fix": "npm run lint:fix && prettier --write \"src/**/*.{ts,tsx}\" && npm run build",
     "build:clean": "rm -rf dist && npm run build:fix",
