--- a/package.json
+++ b/package.json
@@ -172,7 +172,6 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.0.0",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
@@ -183,10 +182,10 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/chart.js": "^2.9.37",
     "@types/jest": "^29.5.14",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@types/react-window": "^1.8.5",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "^5.1.34",
     "@types/testing-library__react": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
@@ -209,9 +208,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.14.0",
-    "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.36.0",
     "styled-components": "^5.3.6",
-    "typescript": "^4.9.5"
+    "typescript": "^5.8.2"
   }
 }
