fix: ensure correct hooks types path in package.json for v1.0.12

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "./hooks": {
       "import": "./dist/hooks.esm.js",
       "require": "./dist/hooks.js",
-      "types": "./dist/hooks.d.ts"
+      "types": "./dist/hooks/index.d.ts"
     },
     "./physics": {
       "import": "./dist/animations/physics/index.esm.js",
