--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^3.2.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "color": "^5.0.0",
     "csstype": "^3.1.3",
     "date-fns": "^4.1.0",
