--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@veerone/galileo-glass-ui",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "private": false,
   "description": "A comprehensive glass morphism design system for modern interfaces",
   "homepage": "https://galileo-glass.com/",
@@ -100,23 +100,12 @@
     "typecheck:ultra": "tsc --noEmit --skipLibCheck --project ./.tsconfig-ultra-permissive.json",
     "typecheck:examples": "tsc --noEmit --skipLibCheck --project ./.ts-examples.json",
     "typecheck:build": "tsc --noEmit --skipLibCheck --project ./.tsconfig-ultra-permissive.json",
-    "prepare": "node --input-type=module -e \"import { execSync } from 'child_process'; if (process.env.NODE_ENV !== 'production') { console.log('\\n⚙️ Development environment detected - running build...'); execSync('npm run build && husky install', {stdio: 'inherit'}); } else { console.log('\\n🚀 Production environment detected - skipping build...'); }\"",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "verify": "./scripts/verify.sh",
     "verify:fix": "./scripts/verify.sh --fix",
     "fix:unused-vars": "node scripts/fix-unused-vars.js",
-    "fix:hooks": "node scripts/fix-hooks.js",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,md}": [
-      "prettier --write"
-    ]
+    "fix:hooks": "node scripts/fix-hooks.js"
   },
   "keywords": [
     "glass",
@@ -212,7 +201,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.12.0",
     "eslint-plugin-testing-library": "^7.1.1",
-    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
     "jest-axe": "^10.0.0",
